--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="wrapper">
 		<div class="flex-container">
 			<div class="header_block flex-lg-12 flex-md-12 flex-sm-12 flex-xs-12">
-				<div class="logo_img flex-sm-3"><img src="../img/logo.png" alt="logo"></div>
+				<div class="logo_img flex-sm-3"><img src="img/logo.png" alt="logo"></div>
 				<div class="list_header flex-sm-9">
 					<ul>
 						<li><a href="#">Додому</a></li>
