added right way to images

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="header_slide">
 				<div class="slide">
-					<img src="/img/bg_img_1.jpg" alt="background image">
+					<img src="img/bg_img_1.jpg" alt="background image">
 					<div class="header_content">
 						<h2>Вам потрібен ремонт?</h2>
 						<p>Без лишнього головного болю,</p>
@@ -48,7 +48,7 @@
 					</div>
 				</div>
 				<div class="slide">
-					<img src="/img/bg_img_2.jpg" alt="background image">
+					<img src="img/bg_img_2.jpg" alt="background image">
 					<div class="header_content">
 						<h2>Вам потрібен ремонт?</h2>
 						<p>Без лишнього головного болю,</p>
@@ -58,7 +58,7 @@
 					</div>
 				</div>
 				<div class="slide">
-					<img src="/img/bg_img_3.jpg" alt="background image">
+					<img src="img/bg_img_3.jpg" alt="background image">
 					<div class="header_content">
 						<h2>Вам потрібен ремонт?</h2>
 						<p>Без лишнього головного болю,</p>
@@ -156,7 +156,7 @@
 						</div>
 						<div class="reviews-slider">
 							<div class="reviews-slider-container rsc-1">
-								<img src="/img/reviews.png" alt="reviews">
+								<img src="img/reviews.png" alt="reviews">
 								<div class="text-reviews-slider">
 									<div class="date-reviews">
 									<h6>Darcy M.</h6>
@@ -172,7 +172,7 @@
 								</div>
 							</div>
 							<div class="reviews-slider-container rsc-2">
-								<img src="/img/reviews_2.png" alt="reviews">
+								<img src="img/reviews_2.png" alt="reviews">
 								<div class="text-reviews-slider">
 									<div class="date-reviews">
 										<h6>George N.</h6>
@@ -187,7 +187,7 @@
 								</div>
 							</div>
 							<div class="reviews-slider-container rsc-1">
-								<img src="/img/reviews.png" alt="reviews">
+								<img src="img/reviews.png" alt="reviews">
 								<div class="text-reviews-slider">
 									<div class="date-reviews">
 										<h6>Darcy M.</h6>
