--- a/index.html
+++ b/index.html
@@ -361,5 +361,18 @@
 		]
 	});
 	</script>
+
+<script>
+	// Initialize and add the map
+	function initMap() {
+		// The location of Uluru
+		var uluru = {lat: 49.2276009, lng: 28.3959342};
+		// The map, centered at Uluru
+		var map = new google.maps.Map(
+				document.getElementById('map'), {zoom: 15, center: uluru});
+		// The marker, positioned at Uluru
+		var marker = new google.maps.Marker({position: uluru, map: map});
+	}
+			</script>
 </body>
 </html>
