add next step before delete wrapper div

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Главная</title>
+	<title>Твій дім</title>
 	<meta name='description' content="" />
 	<meta name="keywords" content="" />
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -29,10 +29,10 @@
 					<ul>
 						<li><a href="#">Додому</a></li>
 						<li><a href="#">Допомога</a></li>
-						<li><a href="#">Attorneys</a></li>
-						<li><a href="#">FAQ</a></li>	
+						<li><a href="#">Види робіт</a></li>	
 						<li><a href="#">Відгуки</a></li>
 						<li><a href="#">Зв'язок</a></li>
+						<li><a href="#map">Розташування</a></li>
 					</ul>
 				</div>
 			</div>
@@ -44,6 +44,7 @@
 						<p>Без лишнього головного болю,</p>
 						<p>Без щоденних пошуків матеріалів,</p>
 						<p>Швидко та якісно.</p>
+						<p>(097) 782-10-15</p>
 						<button><a href="#">Читати більше</a></button>
 					</div>
 				</div>
@@ -54,6 +55,7 @@
 						<p>Без лишнього головного болю,</p>
 						<p>Без щоденних пошуків матеріалів,</p>
 						<p>Швидко та якісно,</p>
+						<p>(097) 782-10-15</p>
 						<button><a href="#">Читати більше</a></button>
 					</div>
 				</div>
@@ -64,6 +66,7 @@
 						<p>Без лишнього головного болю,</p>
 						<p>Без щоденних пошуків матеріалів,</p>
 						<p>Швидко та якісно,</p>
+						<p>(097) 782-10-15</p>
 						<button><a href="#">Читати більше</a></button>
 					</div>
 				</div>
@@ -129,23 +132,37 @@
 					<div class="car-accident-container">
 						<div class="slider-accident">
 							<div class="slider-accident-item">
-								<span>Car Accident</span>
-								<img src="img/car_work_2.png" alt="background image" class="first-img">
+								<span>Обої</span>
+								<img src="img/обои/wall_1.jpg" alt="background image" class="first-img">
 								<!-- <img src="img/car_work_1.png" alt="background image" class="second-img"> -->
 								
 							</div>
 						</div>
 						<div class="slider-accident">
 							<div class="slider-accident-item">
-								<span>CAr Accident</span>
-								<img src="img/car_work_3.png" alt="background image" class="first-img">
+								<span>Наші роботи</span>
+								<img src="img/наши роботы/work_1.jpg" alt="background image" class="first-img">
 								<!-- <img src="img/car_work_4.png" alt="background image" class="second-img"> -->
 							</div>
 						</div>
 						<div class="slider-accident">
 							<div class="slider-accident-item">
-								<span>personal injury</span>
-								<img src="img/car_work_5.png" alt="background image" class="first-img">
+								<span>Венеціанки</span>
+								<img src="img/Венецианские штукатурки/venecians_1.jpg" alt="background image" class="first-img">
+							</div>
+						</div>
+					</div>
+					<div class="car-accident-container">
+						<div class="slider-accident">
+							<div class="slider-accident-item">
+								<span>Фотопечать під заказ</span>
+								<img src="img/фотопечать под заказ/venecians_2.jpg" alt="background image" class="first-img">
+							</div>
+						</div>
+						<div class="slider-accident">
+							<div class="slider-accident-item">
+								<span>Вироби із поліуретана</span>
+								<img src="img/изделия из полиуритана/poly_1.jpg" alt="background image" class="first-img">
 							</div>
 						</div>
 					</div>
@@ -249,8 +266,24 @@
 				</div>
 			</div>
 		</div>
-	</main>
 
+		<div id="our-partners">
+			<div class="container">
+				<div class="carousel-partner--container">
+					<div class="carousel-partner">
+						<div class="carouse-partner--item"><img src="img/partners/Rasch.png" alt="rasch partner"></div>
+						<div class="carouse-partner--item"><img src="img/partners/logo-KT.png" alt="kt partner"></div>
+						<div class="carouse-partner--item"><img src="img/partners/logo-NY.png" alt="ny partner"></div>
+						<div class="carouse-partner--item"><img src="img/partners/logo-rolis.png" alt="rolis partner"></div>
+						<div class="carouse-partner--item"><img src="img/partners/logo-rolis.png" alt="rolis partner"></div>
+					</div>
+					<div class="prev-partner-slider"></div>
+					<div class="next-partner-slider"></div>
+				</div>
+			</div>
+		</div>
+	</main>
+ 
 <!-- CONTENT EOF   -->
 
 <!-- BEGIN FOOTER -->
@@ -262,45 +295,18 @@
 				<p>Our Pages</p>
 				<ul>
 					<div class="flex-xl-6 flex-lg-6 flex-md-12">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">How we can help</a></li>
-						<li><a href="#">Attorneys</a></li>
-					</div>
-					<div class="flex-xl-6 flex-lg-6 flex-md-12">
-						<li><a href="#">FAQ</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="rewiews.html">Венеціанські штукатурки</a></li>
+							<li><a href="#">Продаж всіх видів обоїв</a></li>
+							<li><a href="#">Вироби із поліуретана</a></li>
+							<li><a href="#">Фрески</a></li>
+						<li><a href="#">Фотопечать</a></li>
+						<li><a href="#">Ремонт під ключ</a></li>
 					</div>
 				</ul>
-			</div>
-	
-			<div class="other-info-footer flex-md-12">
-				<p>Other Info</p>
-				<ul>
-					<div class="flex-xl-6 flex-lg-6 flex-md-12">
-						<li><a href="#">Auto Accident</a></li>
-						<li><a href="#">Workers Compensation</a></li>
-						<li><a href="#">Others Cases</a></li>
-					</div>
-					<div class="flex-xl-6 flex-lg-6 flex-md-12">
-							<li><a href="#">Free Application</a></li>
-					</div>
-				</ul>
-			</div>
-	
+			</div>	
 			<div class="flex-container">
-				<div class="find-us-footer flex-md-12">
-					<p>Find Us</p>
-					<ul>
-					<div class="flex-xl-6 flex-lg-6 flex-md-6">
-						<li><a href="#">415 N LaSalle St Suite 301Chicago, IL 60654</a></li>
-						<li><a href="tel:(312) 416 0948"><span>Ph.:</span>(312) 416 0948</a></li>
-					</div>
-						<div class="flex-xl-6 flex-lg-6 flex-md-6">
-							<li><a href="tel:(888) 250 8107"><span>Toll Free:</span> (888) 250 8107</a></li>
-							<li><a href="fax:(312) 276 4882"><span>Fax:</span>(312) 276 4882</a></li>
-						</div>
-					</ul>
+				<div id="map">
+
 				</div>
 			</div>
 		</div>
@@ -346,6 +352,17 @@
 	</script>
 
 	<script>
+	$('.carousel-partner').slick({
+		slidesToShow: 2,
+		dots: true,
+		infinite: true,
+		centerMode: true,
+		prevArrow: $('.prev-partner-slider'),
+		nextArrow: $('.next-partner-slider'),
+	})
+	</script>
+
+	<script>
 	$('.reviews-slider').slick({
 		dots: true,
 		slidesToShow: 2,
@@ -373,6 +390,10 @@
 		// The marker, positioned at Uluru
 		var marker = new google.maps.Marker({position: uluru, map: map});
 	}
-			</script>
+</script>
+
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTWS0BYzHg5I8_iFr5WAI1jw5p6ND8V8w&callback=initMap">
+</script>
 </body>
 </html>
