--- a/index.html
+++ b/index.html
@@ -82,13 +82,10 @@
 <!-- BEGIN CONTENT -->
 
 	<main class="main">
-		<div class="wrapper">
-
-
 			<div class="welcome">
 				<div class="row">
 					<div class="flex-xl-12 flex-lg-12 flex-md-12 welcome-text">
-					<h1>Welcome to Advance</h1>
+					<h1>Ласкаво просимо</h1>
 					<h2>Welcome to Advance Case Lending</h2>
 					<p class="another-welcome-text-color">Mogirbi sed nulla ac est cursus suscipit eu ac lectus. Curabitur ullamcorper nibh nisi, sed eleifend dolor. Pellentesque adipiscing sollicitudin sapien nec aliquet.</p>
 					<p>Praesent volutpat dolor at nulla egestas in vestibulum mauris lacinia. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque tincidunt commodo nisl. Morbi dui nulla, tristique viverra, commodo mollis, ultricies ut, augue. Quisque ut odio. Etiam fringilla vestibulum nulla. Suspendisse venenatis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
@@ -131,39 +128,36 @@
 					</div>
 					<div class="car-accident-container">
 						<div class="slider-accident">
-							<div class="slider-accident-item">
+							<a href="#" class="slider-accident-item">
 								<span>Обої</span>
 								<img src="img/обои/wall_1.jpg" alt="background image" class="first-img">
-								<!-- <img src="img/car_work_1.png" alt="background image" class="second-img"> -->
-								
-							</div>
+							</a>
 						</div>
 						<div class="slider-accident">
-							<div class="slider-accident-item">
+							<a href="#" class="slider-accident-item">
 								<span>Наші роботи</span>
 								<img src="img/наши роботы/work_1.jpg" alt="background image" class="first-img">
-								<!-- <img src="img/car_work_4.png" alt="background image" class="second-img"> -->
-							</div>
+							</a>
 						</div>
 						<div class="slider-accident">
-							<div class="slider-accident-item">
+							<a href="#" class="slider-accident-item">
 								<span>Венеціанки</span>
 								<img src="img/Венецианские штукатурки/venecians_1.jpg" alt="background image" class="first-img">
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="car-accident-container">
 						<div class="slider-accident">
-							<div class="slider-accident-item">
+							<a href="#" class="slider-accident-item">
 								<span>Фотопечать під заказ</span>
 								<img src="img/фотопечать под заказ/venecians_2.jpg" alt="background image" class="first-img">
-							</div>
+							</a>
 						</div>
 						<div class="slider-accident">
-							<div class="slider-accident-item">
+							<a href="#" class="slider-accident-item">
 								<span>Вироби із поліуретана</span>
 								<img src="img/изделия из полиуритана/poly_1.jpg" alt="background image" class="first-img">
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="row">
@@ -265,7 +259,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
 
 		<div id="our-partners">
 			<div class="container">
@@ -289,7 +282,6 @@
 <!-- BEGIN FOOTER -->
 
 <footer class="footer">
-	<div class="wrapper">
 		<div class="flex-container footer-info">
 			<div class="our-pages-footer flex-md-12">
 				<p>Our Pages</p>
@@ -314,7 +306,6 @@
 		<div class="copyrights-line">
 			<span>Copyright © 2011 Advance case Lending</span>
 		</div>
-	</div>
 </footer>
 
 <!-- FOOTER EOF   -->
